Moved general implementations to own repository
Improved tests
Removed spring-boot from tests
Added tests for DEM2021
Removed kotlin
Code cleanup
Fixed application config
Workarounds for Java 17
Disabled DevTools
Changed implementation of MessageReceivers
Added JPMS to heats